--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "developer-portfolio",
+  "name": "diptadeep-portfolio",
   "description": "Portfolio of Diptadeep Sarkar",
   "version": "0.1.0",
   "private": true,
